--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-15 17:05+0300\n"
+"POT-Creation-Date: 2021-06-22 17:06+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -67,8 +67,10 @@ msgstr "Предупреждение:"
 msgid ""
 "You currently do not have any e-mail address set up. You should really add "
 "an e-mail address so you can receive notifications, reset your password, etc."
-msgstr "В настоящее время у вас нет никакого адреса электронной почты. Вам действительно следует добавить "
-"адрес электронной почты, чтобы вы могли получать уведомления, сбрасывать пароль и т. д."
+msgstr ""
+"В настоящее время у вас нет никакого адреса электронной почты. Вам "
+"действительно следует добавить адрес электронной почты, чтобы вы могли "
+"получать уведомления, сбрасывать пароль и т. д."
 
 #: templates/account/email.html:48
 msgid "Add E-mail Address"
@@ -92,7 +94,8 @@ msgstr ""
 msgid ""
 "Thank you for using %(site_name)s!\n"
 "%(site_domain)s"
-msgstr "Спасибо за использование %(имя_сайта)s!\n"
+msgstr ""
+
 #: templates/account/email/email_confirmation_message.txt:5
 #, python-format
 msgid ""
@@ -112,13 +115,14 @@ msgid ""
 "password for your user account.\n"
 "It can be safely ignored if you did not request a password reset. Click the "
 "link below to reset your password."
-msgstr "Его можно смело игнорировать, если вы не запросили сброс пароля. Нажмите на "
+msgstr ""
+"Его можно смело игнорировать, если вы не запросили сброс пароля. Нажмите на "
 "ссылка ниже, чтобы сбросить пароль."
 
 #: templates/account/email/password_reset_key_message.txt:9
 #, python-format
 msgid "In case you forgot, your username is %(username)s."
-msgstr "В случае, если вы забыли, ваше имя пользователя - %(имя пользователя)."
+msgstr ""
 
 #: templates/account/email/password_reset_key_subject.txt:3
 msgid "Password Reset E-mail"
@@ -134,8 +138,9 @@ msgstr "Подтвердите адрес электронной почты"
 msgid ""
 "Please confirm that <a href=\"mailto:%(email)s\">%(email)s</a> is an e-mail "
 "address for user %(user_display)s."
-msgstr "Пожалуйста, подтвердите, что <a href=\"mailto:%(email)s\">%(email)s</a> - это электронное письмо "
-"адрес пользователя %(user_display)s."
+msgstr ""
+"Пожалуйста, подтвердите, что <a href=\"mailto:%(email)s\">%(email)s</a> - "
+"это электронное письмо адрес пользователя %(user_display)s."
 
 #: templates/account/email_confirm.html:20
 msgid "Confirm"
@@ -146,8 +151,10 @@ msgstr "Подтвердите"
 msgid ""
 "This e-mail confirmation link expired or is invalid. Please <a href="
 "\"%(email_url)s\">issue a new e-mail confirmation request</a>."
-msgstr "Срок действия этой ссылки для подтверждения по электронной почте истек или она недействительна. Пожалуйста <a href="
-"\"%(email_url)s\">отправьте новый запрос на подтверждение по электронной почте</a>."
+msgstr ""
+"Срок действия этой ссылки для подтверждения по электронной почте истек или "
+"она недействительна. Пожалуйста <a href=\"%(email_url)s\">отправьте новый "
+"запрос на подтверждение по электронной почте</a>."
 
 #: templates/account/login.html:54 templates/account/login.html:67
 msgid "Sign In"
@@ -169,12 +176,12 @@ msgstr "Вы уверены, что хотите выйти из системы"
 #: templates/account/messages/cannot_delete_primary_email.txt:2
 #, python-format
 msgid "You cannot remove your primary e-mail address (%(email)s)."
-msgstr "Вы не можете удалить ваш основной e-mail адрес (%(email)"
+msgstr ""
 
 #: templates/account/messages/email_confirmation_sent.txt:2
 #, python-format
 msgid "Confirmation e-mail sent to %(email)s."
-msgstr "Подтверждение по электронной почте отправлено на адрес %(email)."
+msgstr ""
 
 #: templates/account/messages/email_confirmed.txt:2
 #, python-format
@@ -184,12 +191,12 @@ msgstr "Вы подтвердили %(email)s."
 #: templates/account/messages/email_deleted.txt:2
 #, python-format
 msgid "Removed e-mail address %(email)s."
-msgstr "Удален адрес электронной почты %(email)."
+msgstr ""
 
 #: templates/account/messages/logged_in.txt:4
 #, python-format
 msgid "Successfully signed in as %(name)s."
-msgstr "Успешно вошел в систему как %(имя)."
+msgstr ""
 
 #: templates/account/messages/logged_out.txt:2
 msgid "You have signed out."
@@ -236,8 +243,9 @@ msgstr "Сброс Пароля"
 msgid ""
 "Forgotten your password? Enter your e-mail address below, and we'll send you "
 "an e-mail allowing you to reset it."
-msgstr "Забыли свой пароль? Введите свой адрес электронной почты ниже, и мы вышлем вам "
-"электронное письмо, позволяющее вам сбросить его."
+msgstr ""
+"Забыли свой пароль? Введите свой адрес электронной почты ниже, и мы вышлем "
+"вам электронное письмо, позволяющее вам сбросить его."
 
 #: templates/account/password_reset.html:21
 msgid "Reset My Password"
@@ -292,7 +300,8 @@ msgstr ""
 #, python-format
 msgid ""
 "Already have an account? Then please <a href=\"%(login_url)s\">sign in</a>."
-msgstr "У вас уже есть аккаунт? Затем, пожалуйста, <a href= "%(login_url)s">войдите в систему</a>."
+msgstr ""
+
 #: templates/account/signup_closed.html:5
 #: templates/account/signup_closed.html:8
 msgid "Sign Up Closed"
@@ -309,7 +318,7 @@ msgstr "Примечание"
 #: templates/account/snippets/already_logged_in.html:5
 #, python-format
 msgid "you are already logged in as %(user_display)s."
-msgstr "вы уже вошли в систему как %(user_display)."
+msgstr ""
 
 #: templates/account/verification_sent.html:5
 #: templates/account/verification_sent.html:8
@@ -323,36 +332,45 @@ msgid ""
 "We have sent an e-mail to you for verification. Follow the link provided to "
 "finalize the signup process. Please contact us if you do not receive it "
 "within a few minutes."
-msgstr "Мы отправили вам электронное письмо для проверки. Перейдите по ссылке, предоставленной для "
-"завершения процесса регистрации. Пожалуйста, свяжитесь с нами, если вы не получите его "
-"в течение нескольких минут."
+msgstr ""
+"Мы отправили вам электронное письмо для проверки. Перейдите по ссылке, "
+"предоставленной для завершения процесса регистрации. Пожалуйста, свяжитесь с "
+"нами, если вы не получите его в течение нескольких минут."
 
 #: templates/account/verified_email_required.html:12
 msgid ""
 "This part of the site requires us to verify that\n"
 "you are who you claim to be. For this purpose, we require that you\n"
-"verify ownership of your e-mail address. 
-msgstr "Эта часть сайта требует, чтобы мы проверили, что
-вы тот, за кого себя выдаете. Для этой цели мы просим, чтобы вы
-подтвердили право собственности на ваш адрес электронной почты."
+"verify ownership of your e-mail address. "
+msgstr ""
+
 #: templates/account/verified_email_required.html:16
+#, fuzzy
+#| msgid ""
+#| "We have sent an e-mail to you for verification. Follow the link provided "
+#| "to finalize the signup process. Please contact us if you do not receive "
+#| "it within a few minutes."
 msgid ""
-"We have sent an e-mail to you for\n
-verification. Please click on the link inside this e-mail. Please\n
-contact us if you do not receive it within a few minutes."
-msgstr "Мы отправили вам электронное письмо для
-проверки. Пожалуйста, перейдите по ссылке внутри этого письма. Пожалуйста
-свяжитесь с нами, если вы не получите его в течение нескольких минут."
+"We have sent an e-mail to you for\n"
+"verification. Please click on the link inside this e-mail. Please\n"
+"contact us if you do not receive it within a few minutes."
+msgstr ""
+"Мы отправили вам электронное письмо для проверки. Перейдите по ссылке, "
+"предоставленной для завершения процесса регистрации. Пожалуйста, свяжитесь с "
+"нами, если вы не получите его в течение нескольких минут."
+
 #: templates/account/verified_email_required.html:20
 #, python-format
 msgid ""
 "<strong>Note:</strong> you can still <a href=\"%(email_url)s\">change your e-"
 "mail address</a>."
-msgstr "Примечание:вы все еще можете <a href="%(email_url)s">изменить свой адрес электронной почты</a>."
+msgstr ""
 
 #: templates/openid/login.html:9
+#, fuzzy
+#| msgid "Sign In"
 msgid "OpenID Sign In"
-msgstr "Вход в систему OpenID"
+msgstr "Войти"
 
 #: templates/socialaccount/authentication_error.html:5
 #: templates/socialaccount/authentication_error.html:8
@@ -362,7 +380,9 @@ msgstr "Сбой входа в социальную Сеть"
 #: templates/socialaccount/authentication_error.html:10
 msgid ""
 "An error occurred while attempting to login via your social network account."
-msgstr "Произошла ошибка при попытке входа в систему через учетную запись социальной сети"
+msgstr ""
+"Произошла ошибка при попытке входа в систему через учетную запись социальной "
+"сети"
 
 #: templates/socialaccount/connections.html:5
 #: templates/socialaccount/connections.html:8
@@ -373,13 +393,16 @@ msgstr "Подключения к учетной записи"
 msgid ""
 "You can sign in to your account using any of the following third party "
 "accounts:"
-msgstr "Вы можете войти в свою учетную запись с помощью любого из следующих сторонних "
-"учетных записей:"
+msgstr ""
+"Вы можете войти в свою учетную запись с помощью любого из следующих "
+"сторонних учетных записей:"
 
 #: templates/socialaccount/connections.html:43
 msgid ""
 "You currently have no social network accounts connected to this account."
-msgstr "В настоящее время у вас нет учетных записей социальных сетей, подключенных к этой учетной записи."
+msgstr ""
+"В настоящее время у вас нет учетных записей социальных сетей, подключенных к "
+"этой учетной записи."
 
 #: templates/socialaccount/connections.html:46
 msgid "Add a 3rd Party Account"
@@ -396,8 +419,10 @@ msgid ""
 "You decided to cancel logging in to our site using one of your existing "
 "accounts. If this was a mistake, please proceed to <a href=\"%(login_url)s"
 "\">sign in</a>."
-msgstr "вы решили отменить вход на наш сайт, используя одну из существующих учетных записей. Если это была ошибка, пожалуйста, перейдите к <a href=\"%(login_url)s"
-"\">войдите в систему</a>."
+msgstr ""
+"вы решили отменить вход на наш сайт, используя одну из существующих учетных "
+"записей. Если это была ошибка, пожалуйста, перейдите к <a href="
+"\"%(login_url)s\">войдите в систему</a>."
 
 #: templates/socialaccount/messages/account_connected.txt:2
 msgid "The social account has been connected."
@@ -416,5 +441,4 @@ msgstr "Социальная учетная запись была отключе
 msgid ""
 "You are about to use your %(provider_name)s account to login to\n"
 "%(site_name)s. As a final step, please complete the following form:"
-msgstr "Вы собираетесь использовать свою учетную запись %(provider_name)для входа в\n"
-"%(имя_сайта)s. В качестве заключительного шага, пожалуйста, заполните следующую форму:"
+msgstr ""
