--- a/cart/locale/en/LC_MESSAGES/django.po
+++ b/cart/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-23 13:55+0300\n"
+"POT-Creation-Date: 2021-06-24 16:04+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -64,21 +64,15 @@ msgid "заказать"
 msgstr "order"
 
 #: cart/templates/cart/model_form_upload.html:8
-#, fuzzy
-#| msgid ""
-#| "файлы будут проверяться, после проверки вам поступит письмо на "
-#| "электронную почту, которую вы указали при регистрации. Сроки производства "
-#| "не изменятся , если технически файл сделан корректно. Требования к файлам "
-#| "указаны выше."
 msgid ""
 "файлы будут проверяться, после проверки вам поступит письмо на электронную "
 "почту, которую вы указали при регистрации. Сроки производства не изменятся , "
 "если технически файл сделан корректно. Требования к файлам указаны выше"
 msgstr ""
-"the files will be checked, and after checking, you will receive an email to "
-"the emailaddress, that you specified during registration. The production "
+"the files will be checked, after verification, you will receive an email to "
+"the email address that you specified during registration. The production "
 "time will not change, if the file is technically made correctly. The file "
-"requirements are listed above."
+"requirements are listed above"
 
 #: cart/templates/cart/model_form_upload.html:32
 msgid "загрузить файл"
