--- a/cart/locale/en/LC_MESSAGES/django.po
+++ b/cart/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-27 21:27+0300\n"
+"POT-Creation-Date: 2021-06-27 22:08+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -64,12 +64,13 @@ msgid "заказать"
 msgstr "order"
 
 #: cart/templates/cart/model_form_upload.html:8
-
-msgid "файлы <i class=\"fas fa-file\"></i> будут проверяться, после проверки вам "
+msgid ""
+"файлы <i class=\"fas fa-file\"></i> будут проверяться, после проверки вам "
 "поступит письмо на электронную почту, которую вы указали при регистрации. "
 "Сроки производства не изменятся , если технически файл сделан корректно. "
 "Требования к файлам указаны ниже"
-msgstr "the files will be checked, after checking, you will receive an email to the "
+msgstr ""
+"the files will be checked, after checking, you will receive an email to the "
 "emailaddress that you specified during registration. The production time "
 "will not change, if the file is technically made correctly."
 
